# eleganz

./: .gitignore  Makefile.am  build_ps3.sh  configure.ac  ps3sfo.xml
data/: Makefile.am
data/themes/: Makefile.am  rules
data/themes/dark/: Makefile.am  dark.edc
data/themes/dark/edc/: categories.edc  exquisite.edc  items.edc  main.edc  menu.edc  secondary.edc
data/themes/default/: Makefile.am  default.edc  rules
data/themes/default/edc/: categories.edc  items.edc  main.edc  menu.edc  secondary.edc
data/themes/light/: Makefile.am  light.edc
data/themes/light/edc/: categories.edc  exquisite.edc  items.edc  main.edc  menu.edc
src/: Elegance.c  Eleganz.c  FLHOC.c  FLHOC_menu.c  FLHOC_menu.h  Makefile.am  config.h  game.c  game.h  homebrew_center.c  keys.c  keys.h  manager.c  manager.h  menu.c  menu.h  paged_file.c  paged_file.h  pkg.c  pkg.h
